--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
@@ -18,10 +18,6 @@
 	@Html.Partial("_ProfileList", Model.Where(x => x.IsSystemProfile), new ViewDataDictionary { { "IsSystemProfile", true } })
 </div>
 
-<form id="ProfileExportForm" method="POST" action="@Url.Action("Execute", "Export", new { area = "Admin" })">
-	<input type="hidden" name="Id" value="" />
-</form>
-
 <div id="export-profile-dialog" class="modal modal-large hide fade" tabindex="-1" data-profile="@T("Common.Profile")">
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal"><b>&#215;</b></button>
@@ -193,14 +189,12 @@
 		}
 
 
-		// start task
+		// start export task
 		$(document).on('click', '.btn-run-task', function (e) {
 			e.preventDefault();
-			if (confirm('@T("Admin.Common.AskToProceed")')) {
-				var form = $('#ProfileExportForm');
-				form.find('input[name=Id]').val($(this).attr('data-id'));
-				form.submit();
-			}
+			$(this).doPostData({
+				ask: '@T("Admin.Common.AskToProceed")'
+			});
 			return false;
 		});
 
