--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
@@ -456,7 +456,9 @@
 	}
 	else
 	{
-        @T("Admin.Catalog.Categories.Discounts.NoDiscounts")
+		<div class="alert alert-info">
+			@T("Admin.Catalog.Categories.Discounts.NoDiscounts")
+		</div>
 	}
 }
 
