Addendum to the last commit

--- a/src/Presentation/SmartStore.Web/Views/Product/Reviews.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Reviews.cshtml
@@ -9,7 +9,7 @@
     
     if (Model.Items.Count == 0)
     {
-        Html.AddCustomHeadParts("<meta name=\"robots\" content=\"noindex follow\">");
+        Html.AddCustomHeadParts("<meta name=\"robots\" content=\"noindex, follow\">");
     }
 }
 <div class="page product-reviews-page">
