--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -1775,7 +1775,7 @@
                 @Html.SmartLabelFor(model => model.AddOrderNoteMessage)
             </td>
             <td class="adminData">
-                @Html.TextAreaFor(model => model.AddOrderNoteMessage, new { style = "Width: 350px; Height: 150px;" })
+                @Html.TextAreaFor(model => model.AddOrderNoteMessage, new { @class = "control-xlarge", style = "height: 120px;" })
                 @Html.ValidationMessageFor(model => model.AddOrderNoteMessage)
             </td>
         </tr>
