--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/_Tab.Deployment.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/_Tab.Deployment.cshtml
@@ -104,7 +104,7 @@
 	{
 		<div class="alert alert-info">
 			<button type="button" class="close" data-dismiss="alert">&#215;</button>
-			@T("Admin.DataExchange.Export.NoProfiles")
+			@T("Admin.DataExchange.Export.Deployment.NoProfiles")
 		</div>
 	}
 
