Enabled import context to accept strings as progress messages

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1580,11 +1580,17 @@ table.payment-method-features td {
 }
 
 
+
+
 /* Data exchange
 -------------------------------------------------------------- */
 .profile-list {
 	margin-bottom: 10px;
 	border-bottom: 1px solid #ddd;
+}
+
+.info-profile td {
+    padding-top: 20px;
 }
 
 /* Import column mapping
