--- a/src/Presentation/SmartStore.Web/Views/Home/ContactUs.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Home/ContactUs.cshtml
@@ -24,11 +24,6 @@
             {
             <fieldset>
 
-                @if (!ViewData.ModelState.IsValid) 
-                {
-                    @Html.ValidationSummary(true)
-                }
-
                 <legend>@T("PageTitle.ContactUs")</legend>
 
                 <div class="control-group">
@@ -55,6 +50,28 @@
                     </div>
                 </div>
                 
+                @if(Model.DisplayPrivacyAgreement)
+                { 
+                    @Html.HiddenFor(model => model.DisplayPrivacyAgreement)
+                    
+                    <div class="control-group">
+                        @Html.LabelFor(model => model.PrivacyAgreement, new { @class = "control-label required", @for = "PrivacyAgreement" })
+                        <div class="controls">
+                            <div>
+                                <label class="checkbox">
+                                    @Html.CheckBoxFor(model => model.PrivacyAgreement)
+                                    @Html.Raw(T("ContactUs.PrivacyAgreement.DetailText").Text.FormatWith(
+                                        Url.RouteUrl("Topic", new { SystemName = "PrivacyInfo" })
+                                    ))
+                                </label>
+                            </div>
+                            <div>
+                                @Html.ValidationMessageFor(model => model.PrivacyAgreement)
+                            </div>
+                        </div>
+                    </div>
+                }
+
                 @if (Model.DisplayCaptcha)
                 {
                     <div class="control-group">
