--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/_OrderReviewData.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/_OrderReviewData.cshtml
@@ -13,6 +13,7 @@
                     </div>
                     <div class="block-body">
                         <div class="name">
+                            @Model.BillingAddress.Salutation @(!String.IsNullOrEmpty(Model.BillingAddress.Title) ? @Model.BillingAddress.Title + " " : "")
                             @Model.BillingAddress.FirstName @Model.BillingAddress.LastName
                         </div>
                         <div class="email">
@@ -24,7 +25,7 @@
                                 @T("Order.Phone"): @Model.BillingAddress.PhoneNumber
                             </div>
                         }
-                        @if (Model.BillingAddress.FaxEnabled)
+                        @if (Model.BillingAddress.FaxEnabled && !String.IsNullOrEmpty(Model.BillingAddress.FaxNumber))
                         {
                             <div class="fax">
                                 @T("Order.Fax"): @Model.BillingAddress.FaxNumber
@@ -90,6 +91,7 @@
                         </div>
                         <div class="block-body">
                             <div class="name">
+                                @Model.ShippingAddress.Salutation @(!String.IsNullOrEmpty(Model.ShippingAddress.Title) ? @Model.ShippingAddress.Title + " " : "")
                                 @Model.ShippingAddress.FirstName @Model.ShippingAddress.LastName
                             </div>
                             <div class="email">
@@ -101,7 +103,7 @@
                                     @T("Order.Phone"): @Model.ShippingAddress.PhoneNumber
                                 </div>
                             }
-                            @if (Model.ShippingAddress.FaxEnabled)
+                            @if (Model.ShippingAddress.FaxEnabled  && !String.IsNullOrEmpty(Model.ShippingAddress.FaxNumber))
                             {
                                 <div class="fax">
                                     @T("Order.Fax"): @Model.ShippingAddress.FaxNumber
