--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.Print.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.Print.cshtml
@@ -53,7 +53,7 @@
 						{
                             <div>@address.Company</div>
                         }
-                        <div>@JoinValues(new string[] { address.FirstName, address.LastName })</div>
+                        <div>@JoinValues(new string[] { address.Salutation, address.Title, address.FirstName, address.LastName })</div>
                         @if (address.Address1.HasValue())
                         {
                             <div>@address.Address1</div>
