--- a/src/Presentation/SmartStore.Web/Views/Shared/_CreateOrUpdateAddress.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_CreateOrUpdateAddress.cshtml
@@ -13,7 +13,7 @@
                 $.ajax({
                     cache: false,
                     type: "GET",
-                    url: "@(Url.Action("GetStatesByCountryId", "Country"))",
+                    url: "@(Url.Action("GetStatesByCountryId", "Country", new { area = "" }))",
                     data: { "countryId": selectedItem, "addEmptyStateIfRequired": "true" },
                     success: function (data) {
                         ddlStates.html('');
@@ -47,6 +47,28 @@
     }
     
     <div><hr /></div>
+
+    @if (Model.SalutationEnabled)
+    {
+    <div class="control-group">
+        @Html.LabelFor(model => model.Salutation, new { @class = "control-label", @for = "Salutation" })
+        <div class="controls">
+            @Html.DropDownListFor(model => model.Salutation, Model.AvailableSalutations)
+            @Html.ValidationMessageFor(model => model.Salutation)
+        </div>
+    </div>
+    }
+    
+    @if (Model.TitleEnabled)
+    {
+    <div class="control-group">
+        @Html.LabelFor(model => model.Title, new { @class = "control-label", @for = "Title" })
+        <div class="controls">
+            @Html.EditorFor(model => model.Title)
+            @Html.ValidationMessageFor(model => model.Title)
+        </div>
+    </div>
+    }
 
     <div class="control-group">
         @Html.LabelFor(model => model.FirstName, new { @class="control-label required" , @for="FirstName" } )
