Added a field to capture a title in customer info

--- a/src/Presentation/SmartStore.Web/Views/Customer/Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Info.cshtml
@@ -74,6 +74,11 @@
                     </div>
                 }
 
+                @if (Model.TitleEnabled)
+                {
+                    @Html.ControlGroupFor(model => model.Title, required: false)
+                }
+
                 @Html.ControlGroupFor(model => model.FirstName, required: true)
                 @Html.ControlGroupFor(model => model.LastName, required: true)
 
