--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
@@ -473,19 +473,20 @@
     					}
     					return false;
     				});
-
-    				dialog.find('.licensing-reset-status-check').click(function() {
-    					$({}).doAjax({
-    						type: 'POST',
-    						url: dialog.find('form:first').attr('data-resetcheckurl')
-    					});
-    				});
     			}
     		});
 
     		dialog.find('.modal').modal('show');
     		return false;
     	});
+
+		// reset license status
+		$('#plugin-licence-modal').on('click', '.licensing-reset-status-check', function() {
+			$({}).doAjax({
+				type: 'POST',
+				url: $('#plugin-licence-modal').find('.modal-body form:first').attr('data-resetcheckurl')
+			});
+		});
 
         $('#btnRefresh').click(function () {
             // reload page
