--- a/src/Presentation/SmartStore.Web/Administration/Views/Currency/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Currency/List.cshtml
@@ -1,7 +1,8 @@
-﻿@model Telerik.Web.Mvc.GridModel<CurrencyModel>
-@using Telerik.Web.Mvc.UI
+﻿@using Telerik.Web.Mvc.UI
+@using SmartStore.Core.Domain.Directory;
+@model Telerik.Web.Mvc.GridModel<CurrencyModel>
 @{
-    List<SmartStore.Core.Domain.Directory.ExchangeRate> rates = ViewBag.Rates;
+    List<ExchangeRate> rates = ViewBag.Rates;
     bool autoUpdateEnabled = ViewBag.AutoUpdateEnabled ?? false;
 
     ViewBag.Title = T("Admin.Configuration.Currencies").Text;
@@ -70,7 +71,7 @@
 						.Width(160);
                     columns.Bound(x => x.Rate)
 						.RightAlign()
-						.Format("{0:0.00000000}")
+						.Format("{0:0.00000}")
 						.Width(160);
 					columns.Bound(x => x.LimitedToStores)
 						.Template(item => Html.SymbolForBool(item.LimitedToStores))
@@ -87,33 +88,49 @@
 
 @if (rates != null)
 {
-    <h4>@T("Admin.Configuration.Currencies.LiveRates")</h4>
-    <table class="adminContent" style="width: 300px">
+	<p>&nbsp;</p>
+    <h3>@T("Admin.Configuration.Currencies.LiveRates")</h3>
+    <table class="adminContent" style="width:760px;">
         <tr>
             <td>
-                @(Html.Telerik().Grid<SmartStore.Core.Domain.Directory.ExchangeRate>()
-                        .Name("rate-grid")
-                        .DataKeys(x =>
-                        {
-                            x.Add(y => y.CurrencyCode).RouteKey("CurrencyCode");
-                        })
-                        .BindTo(rates)
-                        .Columns(columns =>
-                        {
-                            columns.Bound(x => x.CurrencyCode)
-                                .Centered()
-                                .HeaderTemplate(T("Admin.Configuration.Currencies.Fields.CurrencyCode").Text);
-                            columns.Bound(x => x.Rate)
-                                .Centered()
-                                .HeaderTemplate(T("Admin.Configuration.Currencies.Fields.Rate").Text);
-                            columns.Bound(x => x)
-                                .Template(x => Html.ActionLink(T("Admin.Configuration.Currencies.ApplyRate").Text, "ApplyRate", new { rate = x.Rate, currencyCode = x.CurrencyCode }))
-                                .Centered()
-                                .HeaderTemplate(T("Admin.Configuration.Currencies.ApplyRate").Text)
-                                .Filterable(false);
+                @{
+					Func<string, string> headerTemplate = (caption) => "<span class=\"t-link\">{0}</span>".FormatInvariant(caption);
+					Func<ExchangeRate, object, string> rowTemplate = (rate, value) => "<span class='{0}'>{1}</span>".FormatInvariant(rate.IsStoreCurrency ? "" : "muted", value);
+				}
 
-                        })
-                        .EnableCustomBinding(true)
+				@(Html.Telerik().Grid<ExchangeRate>()
+					.Name("rate-grid")
+					.DataKeys(x =>
+					{
+						x.Add(y => y.CurrencyCode).RouteKey("CurrencyCode");
+					})
+					.BindTo(rates.OrderBy(x => !x.IsStoreCurrency).ThenBy(x => x.Name))
+					.Columns(columns =>
+					{
+						columns.Bound(x => x.Name)
+							.HeaderTemplate(headerTemplate(T("Admin.Configuration.Currencies.Fields.Name")))
+							.Template(x => rowTemplate(x, x.Name));
+						columns.Bound(x => x.CurrencyCode)
+							.Centered()
+							.HeaderTemplate(headerTemplate(T("Admin.Configuration.Currencies.Fields.CurrencyCode")))
+							.Template(x => rowTemplate(x, x.CurrencyCode));
+						columns.Bound(x => x.UpdatedOn)
+							.Centered()
+							.HeaderTemplate(headerTemplate(T("Admin.Common.Updated")))
+							.Template(x => rowTemplate(x, x.UpdatedOn.RelativeFormat(true, "f")));
+						columns.Bound(x => x.Rate)
+							.RightAlign()
+							.HeaderTemplate(headerTemplate(T("Admin.Configuration.Currencies.Fields.Rate")))
+							.Template(x => rowTemplate(x, x.Rate.ToString("0.00000")));
+						columns.Bound(x => x)
+							.Centered()
+							.Filterable(false)
+							.HeaderTemplate(headerTemplate(T("Admin.Configuration.Currencies.ApplyRate")))
+							.Template(x => Html.ActionLink(T("Admin.Configuration.Currencies.ApplyRate").Text, "ApplyRate",
+								new { rate = x.Rate, currencyCode = x.CurrencyCode },
+								new { @class = x.IsStoreCurrency ? "" : "hide" }));
+					})
+					.EnableCustomBinding(true)
 				)
             </td>
         </tr>
