Added selection of a storage provider when moving media files to a new storage location

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/RichEditor.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/RichEditor.cshtml
@@ -18,7 +18,7 @@
 
 @{
     var availableLangs = new string[] { "de", "en" };
-    var lang = WorkContext.WorkingLanguage.UniqueSeoCode;
+    var lang = WorkContext.WorkingLanguage.UniqueSeoCode.EmptyNull().ToLower();
     if (!availableLangs.Contains(lang))
     {
         lang = "en";
