DownloadService saving binary data like PictureService through current storage provider

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
@@ -174,13 +174,13 @@
 			<td colspan="2">
 				<div class="admin-config-group">
 					<div class="title">
-						@T("Admin.Configuration.Settings.Media.PicturesStoredIntoDatabase")
+						@(T("Admin.Configuration.Settings.Media.MediaIsStoredIn"))&hellip;
 					</div>
 				</div>
 				<div class="alert alert-warning">
 					@T("Admin.Configuration.Settings.Media.MovePicturesNote")
 					<p></p>
-					@T("Admin.Configuration.Settings.Media.CurrentStorageLocation"): 
+					@(T("Admin.Configuration.Settings.Media.MoveMediaNote")): 
 					<strong>@Model.StorageProvider</strong>
 				</div>
 			</td>
