Media storage mover includes moving download binary data

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
@@ -178,9 +178,9 @@
 					</div>
 				</div>
 				<div class="alert alert-warning">
-					@T("Admin.Configuration.Settings.Media.MovePicturesNote")
+					@T("Admin.Configuration.Settings.Media.MoveMediaNote")
 					<p></p>
-					@(T("Admin.Configuration.Settings.Media.MoveMediaNote")): 
+					@(T("Admin.Configuration.Settings.Media.CurrentStorageLocation")): 
 					<strong>@Model.StorageProvider</strong>
 				</div>
 			</td>
